--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
     "@docusaurus/preset-classic": "^2.0.0-alpha.50",
     "@docusaurus/theme-live-codeblock": "^2.0.0-alpha.39",
     "classnames": "^2.2.6",
+    "entity-form": "0.0.2",
     "npm-to-yarn": "^1.0.0-0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
