--- a/website/package.json
+++ b/website/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "my-website",
+  "name": "websitenew",
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy"
+    "deploy": "docusaurus deploy",
+    "serve": "docusaurus serve"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-alpha.50",
-    "@docusaurus/plugin-ideal-image": "^2.0.0-alpha.50",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.50",
-    "@docusaurus/theme-live-codeblock": "^2.0.0-alpha.39",
-    "classnames": "^2.2.6",
-    "entity-form": "0.0.2",
-    "npm-to-yarn": "^1.0.0-0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "@docusaurus/core": "2.0.0-alpha.65",
+    "@docusaurus/preset-classic": "2.0.0-alpha.65",
+    "@mdx-js/react": "^1.5.8",
+    "@styli/react": "^0.3.0",
+    "clsx": "^1.1.1",
+    "entity-form": "^0.1.1",
+    "entity-form-pristine": "0.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "browserslist": {
     "production": [
@@ -30,5 +32,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-decorators": "^7.10.5",
+    "@docusaurus/module-type-aliases": "^2.0.0-alpha.51",
+    "@tsconfig/docusaurus": "^1.0.2",
+    "@types/react": "^16.9.51",
+    "@types/react-helmet": "^6.1.0",
+    "@types/react-router-dom": "^5.1.6",
+    "typescript": "^4.0.3"
   }
 }
