--- a/packages/entity-form-antd/package.json
+++ b/packages/entity-form-antd/package.json
@@ -24,6 +24,7 @@
     "react": ">=16"
   },
   "devDependencies": {
+    "@types/lodash.get": "^4.4.6",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "antd": "^4.6.6",
@@ -34,6 +35,8 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "entity-form": "^0.1.1"
+    "entity-form": "^0.1.1",
+    "lodash.get": "^4.4.2",
+    "stook-graphql": "^0.4.0"
   }
 }
