chore: update npm script

--- a/packages/entity-form/package.json
+++ b/packages/entity-form/package.json
@@ -17,8 +17,7 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build"
+    "lint": "tsdx lint"
   },
   "devDependencies": {
     "@types/is-promise": "^2.1.0",
