--- a/examples/example/package.json
+++ b/examples/example/package.json
@@ -30,6 +30,7 @@
     "@types/lodash.topath": "^4.5.6",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.8.4",
+    "entity-form": "^0.1.1",
     "parcel": "^1.12.3",
     "typescript": "^3.4.5"
   }
