--- a/lerna.json
+++ b/lerna.json
@@ -1,14 +1,20 @@
 {
-  "packages": ["packages/*"],
-  "npmClient": "npm",
+  "packages": [
+    "packages/*",
+    "examples/*",
+    "website"
+  ],
+  "npmClient": "yarn",
+  "useWorkspaces": true,
   "command": {
     "publish": {
-      "ignoreChanges": ["ignored-file", "*.md", "*.tsconfg.json"],
+      "ignoreChanges": [
+        "ignored-file",
+        "*.md",
+        "*.tsconfg.json"
+      ],
       "message": "chore(release): publish",
       "registry": "http://registry.npmjs.org"
-    },
-    "bootstrap": {
-      "npmClientArgs": ["--registry", "https://registry.npm.taobao.org", "--no-package-lock"]
     }
   },
   "version": "0.1.1"
