--- a/package.json
+++ b/package.json
@@ -47,11 +47,15 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@types/jest": "^26.0.14",
+    "@types/jest": "^26.0.16",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "husky": "^4.3.0",
-    "jest": "^26.4.2",
+    "jest": "^26.6.3",
     "lerna": "^3.22.1",
-    "prettier": "^2.1.2",
-    "typescript": "^4.0.3"
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.2"
   }
 }
